--- a/d3.html
+++ b/d3.html
@@ -149,6 +149,55 @@
 .green {
     color: #4CAF50;
 }
+#scroll-down {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 40px;
+    height: 100px;
+    background-color: white;
+    border-radius: 35px;
+    border: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrow-container {
+    position: relative;
+    width: 20px;
+    height: 60px;
+}
+
+.arrow {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid black;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.faded {
+    border-top-color: gray;
+    top: 20px;
+    opacity: 0.7;
+}
+
+.more-faded {
+    border-top-color: lightgray;
+    top: 40px;
+    opacity: 0.4;
+}
+
+#scroll-down:hover {
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3);
+}
 
 @media (max-width: 768px) {
     .search-container {
@@ -159,13 +208,48 @@
         min-width: 100%;
     }
 }
+
+.legend {
+    font-family: Arial, sans-serif;
+    font-size: 8px;
+}
+
+.styled-button {
+    display: none;
+    background-color: #1e88e5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px 10px 0
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.styled-button:hover {
+    background-color: #1565c0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.styled-button:active {
+    background-color: #0d47a1;
+}
     </style>
 </head>
 
 <body>
-    <button id="reset" style="display:none;">Show Full Map</button>
+    <button id="reset" style="display:none;" class="styled-button">Show Full Map</button>
+    <button id="scroll-down">
+        <div class="arrow-container">
+            <div class="arrow"></div>
+            <div class="arrow faded"></div>
+            <div class="arrow more-faded"></div>
+        </div>
+    </button>
     <div id="chart" style="margin: 0;"></div>
-    <svg width="800" height="00"></svg>
+    <svg width="800" height="600"></svg>
     <div class="tooltip"></div>
 
     <div class="container">
@@ -218,8 +302,8 @@
 
     <script>
         // Set up the SVG dimensions
-        const width = 1600;
-        const height = 800;
+        const width = 1400;
+        const height = 900;
 
         const svg = d3.select("svg")
             .attr("width", width)
@@ -232,15 +316,93 @@
 
         const path = d3.geoPath().projection(projection);
         const tooltip = d3.select(".tooltip");
+
+        // Define color scales
+        const stateColorScale = d3.scaleSequential(d3.interpolateBlues)
+            .domain([0, 100000]); // Adjusted domain for state map
+
+        const districtColorScale = d3.scaleSequential(d3.interpolateOranges)
+            .domain([0, 20000]); // Adjusted domain for district map
+
+        // Add zoom behavior
+        const zoom = d3.zoom()
+            .scaleExtent([1, 4]) // Adjusted zoom levels
+            .on("zoom", zoomed);
+
+        svg.call(zoom);
+
+        function zoomed(event) {
+            svg.selectAll('path').attr('transform', event.transform);
+        }
+
+        // Prevent zoom on scroll
+        d3.select(window).on("wheel", function(event) {
+            if (event.target.tagName === 'svg') {
+                event.preventDefault();
+            }
+        });
+
+        // Function to create a legend
+        function createLegend(colorScale, title, x, y) {
+            const legend = d3.select("body").append("svg")
+                .attr("class", "legend")
+                .attr("width", 250)
+                .attr("height", 50)
+                .style("position", "absolute")
+                .style("left", `${x}px`)
+                .style("top", `${y}px`);
+
+            const legendWidth = 300;
+            const legendHeight = 20;
+
+            const gradient = legend.append("defs")
+                .append("linearGradient")
+                .attr("id", "gradient")
+                .attr("x1", "0%")
+                .attr("y1", "0%")
+                .attr("x2", "100%")
+                .attr("y2", "0%");
+
+            gradient.append("stop")
+                .attr("offset", "0%")
+                .attr("stop-color", colorScale(colorScale.domain()[0])); // Light color
+
+            gradient.append("stop")
+                .attr("offset", "100%")
+                .attr("stop-color", colorScale(colorScale.domain()[1])); // Dark color
+
+            legend.append("rect")
+                .attr("width", legendWidth)
+                .attr("height", legendHeight)
+                .style("fill", "url(#gradient)");
+
+            legend.append("text")
+                .attr("x", legendWidth / 2)
+                .attr("y", -6)
+                .attr("text-anchor", "middle")
+                .text(title);
+
+            const xScale = d3.scaleLinear()
+                .domain(colorScale.domain())
+                .range([0, legendWidth]);
+
+            const xAxis = d3.axisBottom(xScale)
+                .ticks(4);
+
+            legend.append("g")
+                .attr("transform", `translate(0, ${legendHeight})`)
+                .call(xAxis);
+        }
+
         // Load GeoJSON data for Indian states
         d3.json("india_states.geojson").then(function (geojson) {
             const states = svg.selectAll("path")
                 .data(geojson.features)
                 .enter().append("path")
                 .attr("d", path)
-                .attr("fill", "steelblue")
-                .attr("stroke", "#fff")
-                .attr("stroke-width", "1")
+                .attr("fill", d => stateColorScale(Math.random() * 100000)) // Replace Math.random() with actual data
+                .attr("stroke", "black")
+                .attr("stroke-width", "0.5")
                 .on("mouseover", function (event, d) {
                     tooltip.style("visibility", "visible")
                         .text(d.properties.ST_NM);
@@ -256,61 +418,57 @@
                     showState(d);
                 });
 
+            // Create legend for states
+            createLegend(stateColorScale, "State Color Scale", 20, 20);
 
             function showState(stateData) {
                 // Hide other states
-
                 svg.selectAll("path").remove();
-                d3.select('#col')
+                d3.selectAll(".legend").remove(); // Remove existing legend
 
+                // Adjust projection for the selected state
+                const bounds = path.bounds(stateData);
+                const dx = bounds[1][0] - bounds[0][0];
+                const dy = bounds[1][1] - bounds[0][1];
+                const x = (bounds[0][0] + bounds[1][0]) / 2;
+                const y = (bounds[0][1] + bounds[1][1]) / 2;
+                const scale = Math.max(1, Math.min(8, 0.9 / Math.max(dx / width, dy / height)));
+                console.log(scale);
+                const translate = [width / (1.5) - scale * x, height / (1.5) - scale * y];
 
-                // github contribution graph
-                var colorMap = d3.interpolateRgb(
-                    d3.rgb('#ffd4a9'),
-                    d3.rgb('#ffA500')
-                );
-
-                d3.select('#chart')
-                    .selectAll("div")
-                    .data([0.0, 0.07, 0.25, 0.42, 0.58, 0.72, 0.97])
-                    .enter()
-                    .append("div")
-                    .style("background-color", (d) => {
-                        return d == 0 ? '#eee' : colorMap(d);
-                    });
+                svg.transition()
+                    .duration(750)
+                    .call(
+                        zoom.transform,
+                        d3.zoomIdentity.translate(translate[0], translate[1]).scale(scale)
+                    );
 
                 // Draw the selected state
                 svg.append("path")
                     .datum(stateData)
                     .attr("d", path)
                     .attr("fill", "orange")
-                    .attr("stroke", "#fff")
-                    .attr("stroke-width", "1");
+                    .attr("stroke", "black")
+                    .attr("stroke-width", "0.25");
 
-                console.log(stateData);
-                /* 
-                Available State District Data - UP, MP, TamilNadu, Rajasthan
-                */
-                const x = stateData.properties.ST_NM.split(' ').join('');
-                console.log(x);
-                d3.json(`/districts/${x}.geojson`).then(function (geojson) {
-                    const district = svg.selectAll("path")
+                // Load district data for the selected state
+                const stateName = stateData.properties.ST_NM.split(' ').join('');
+                d3.json(`/districts/${stateName}.geojson`).then(function (geojson) {
+                    const districts = svg.selectAll("path")
                         .data(geojson.features)
                         .enter()
                         .append('path')
                         .attr("d", path)
-                        .attr("fill", "orange")
+                        .attr("fill", d => districtColorScale(Math.random() * 20000)) // Replace Math.random() with actual data
                         .attr("stroke", "black")
                         .attr("stroke-width", "0.25")
-                        .attr("width", 800)
-                        .attr("height", 600)
                         .on("mouseover", function (event, d) {
                             tooltip.style("visibility", "visible")
-                            .html(`
+                                .html(`
                                     <h4>${d.properties.Dist_Name}</h4>
                                     <p><strong>State Code:</strong> ${d.properties.State_Code}</p>
                                     <p><strong>District Code:</strong> ${d.properties.Dist_Code}</p>
-                                `); // Assuming district name is stored in NAME_2
+                                `);
                         })
                         .on("mousemove", function (event) {
                             tooltip.style("top", (event.pageY - 10) + "px")
@@ -320,13 +478,22 @@
                             tooltip.style("visibility", "hidden");
                         });
                 });
+
+                // Create legend for districts
+                createLegend(districtColorScale, "District Color Scale", 20, 60);
+
                 // Show the reset button
                 d3.select("#reset").style("display", "block");
             }
 
             // Reset to full map view
             d3.select("#reset").on("click", function () {
+                svg.transition()
+                    .duration(750)
+                    .call(zoom.transform, d3.zoomIdentity);
+
                 svg.selectAll("path").remove();
+                d3.selectAll(".legend").remove(); // Remove existing legend
                 d3.select("#reset").style("display", "none");
                 window.location.reload();
                 // Redraw the full map
@@ -334,12 +501,12 @@
                     .data(geojson.features)
                     .enter().append("path")
                     .attr("d", path)
-                    .attr("fill", "steelblue")
+                    .attr("fill", d => stateColorScale(Math.random() * 100000)) // Replace Math.random() with actual data
                     .attr("stroke", "#fff")
                     .attr("stroke-width", "0.25")
                     .on("mouseover", function (event, d) {
                         tooltip.style("visibility", "visible")
-                            .text(d.properties.NAME_1);
+                            .text(d.properties.ST_NM);
                     })
                     .on("mousemove", function (event) {
                         tooltip.style("top", (event.pageY - 10) + "px")
@@ -351,6 +518,17 @@
                     .on("click", function (event, d) {
                         showState(d);
                     });
+
+                // Create legend for states
+                createLegend(stateColorScale, "State Color Scale", 20, 20);
+            });
+        });
+
+        // Scroll down button functionality
+        document.getElementById('scroll-down').addEventListener('click', function() {
+            window.scrollTo({
+                top: document.body.scrollHeight,
+                behavior: 'smooth'
             });
         });
     </script>
