--- a/d3.html
+++ b/d3.html
@@ -251,53 +251,50 @@
     <div id="chart" style="margin: 0;"></div>
     <svg width="800" height="600"></svg>
     <div class="tooltip"></div>
-
-    <div class="container">
-        <section class="citizen-corner">
-            <h2 class="section-title">Citizen Corner:</h2>
-            <div class="search-container">
+        <div class="container">
+            <section class="citizen-corner">
+              <h2 class="section-title">Citizen Corner:</h2>
+              <div class="search-container">
                 <div class="search-box">
-                    <input type="text" placeholder="Know status of JJM implementation in your village: Select State -> District-> Village">
-                    <button class="search-button">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                    </button>
+                  <input
+                    type="text"
+                    placeholder="Know status of JJM implementation in your village: Select State -> District-> Village"
+                  />
+                  <button class="search-button">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="feather feather-search"
+                    >
+                      <circle cx="11" cy="11" r="8"></circle>
+                      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                  </button>
                 </div>
-                <div class="water-quality">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-droplet"><path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0z"></path></svg>
-                    <span>know water quality of your village</span>
-                </div>
-            </div>
-        </section>
-
-        <section class="water-supply-status">
-            <h2 class="section-title"><span class="blue">India</span> | <span class="orange">Status of tap water supply in rural homes</span></h2>
-            <div class="stats-container">
+              </div>
+            </section>
+      
+            <section class="water-supply-status">
+              <div class="stats-container">
                 <div class="stat-box">
-                    <h3>Total number of households (HHs)</h3>
-                    <p class="stat-value">19,33,33,622</p>
+                  <h3>Total number of Village members (VMs)</h3>
+                  <p class="stat-value">19,33,33,622</p>
                 </div>
-                <div class="stat-box green">
-                    <h3>Households with tap water connections as on 15 Aug 2019</h3>
-                    <p class="stat-value">3,23,62,838</p>
-                    <p class="stat-percentage">(16.74%)</p>
-                </div>
+      
                 <div class="stat-box blue">
-                    <h3>Remaining households</h3>
-                    <p class="stat-value">16,09,70,784</p>
+                  <h3>Approved Members</h3>
+                  <p class="stat-value">10,09,70,784</p>
                 </div>
-            </div>
-            <div class="stats-container">
-                <div class="stat-box blue">
-                    <h3>Households provided with tap water connection since launch of the Mission</h3>
-                    <p class="stat-value">11,89,11,446 <span class="stat-percentage">(73.87%)</span></p>
-                </div>
-                <div class="stat-box blue">
-                    <h3>Households with tap water connections as on date</h3>
-                    <p class="stat-increment">+28,850</p>
-                    <p class="stat-value">15,12,74,284 <span class="stat-percentage">( 78.25% )</span></p>
-                </div>
-            </div>
-        </section>
+              </div>
+            </section>
+          </div>
     </div>
 
     <script>
